@@ -178,8 +178,14 @@ public class LongValueFacetCounts extends Facets {
           if (limit > 0) {
             totCount++;
           }
+          long previousValue = 0;
           for (int i = 0; i < limit; i++) {
-            increment(values.nextValue());
+            long value = values.nextValue();
+            // do not increment the count for duplicate values
+            if (i == 0 || value != previousValue) {
+              increment(value);
+          }
+            previousValue = value;
           }
         }
       }
@@ -244,8 +250,14 @@ public class LongValueFacetCounts extends Facets {
           if (limit > 0) {
             totCount++;
           }
+          long previousValue = 0;
           for (int i = 0; i < limit; i++) {
-            increment(values.nextValue());
+            long value = values.nextValue();
+            // do not increment the count for duplicate values
+            if (i == 0 || value != previousValue) {
+              increment(value);
+            }
+            previousValue = value;
           }
         }
       }
